--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 # This file may be used to create an environment using:
 # $ conda create --name <env> --file <this file>
 # platform: linux-64
+# created-by: conda 24.9.2
 _libgcc_mutex=0.1=main
 _openmp_mutex=5.1=1_gnu
 attrs=24.2.0=pyh71513ae_0
@@ -14,9 +15,9 @@ brotli-bin=1.0.9=h5eee18b_8
 brotli-python=1.0.9=py312h6a678d5_8
 bzip2=1.0.8=h5eee18b_6
 c-ares=1.19.1=h5eee18b_0
-ca-certificates=2024.8.30=hbcca054_0
+ca-certificates=2025.1.31=hbcca054_0
 cairo=1.16.0=hb05425b_5
-certifi=2024.8.30=pyhd8ed1ab_0
+certifi=2024.12.14=pyhd8ed1ab_0
 cfitsio=3.470=hb418390_7
 charset-normalizer=3.4.0=pyhd8ed1ab_0
 click=8.1.7=unix_pyh707e725_0
@@ -27,6 +28,7 @@ curl=8.9.1=hdbd6064_0
 cycler=0.11.0=pyhd3eb1b0_0
 cyrus-sasl=2.1.28=h52b45da_1
 dbus=1.13.18=hb2f20db_0
+emcee=3.1.6=pyhd8ed1ab_1
 expat=2.6.2=h6a678d5_0
 fiona=1.9.5=py312h526ad5a_0
 folium=0.17.0=pyhd8ed1ab_0
